--- a/templates/web/partials/base2.html
+++ b/templates/web/partials/base2.html
@@ -30,7 +30,7 @@
     </head>
     <body>
 
-        
+        {% include 'web/partials/header.html' %}
         {% block content %}
 
         {% endblock content %}
@@ -38,7 +38,7 @@
 
 
 
-
+        {% include "web/partials/footer.html" %}
 
 
         <a class="scroll-top-arrow" href="javascript:void(0);"><i class="ti-arrow-up"></i></a>
