--- a/templates/web/partials/base3.html
+++ b/templates/web/partials/base3.html
@@ -30,7 +30,7 @@
     </head>
     <body>
 
-        
+        {% include 'web/partials/header2.html' %}
         {% block content %}
 
         {% endblock content %}
