--- a/templates/web/partials/header2.html
+++ b/templates/web/partials/header2.html
@@ -56,7 +56,7 @@
                 <div class="header-searchbar">
                     <a href="#search-header" class="header-search-form"><i class="fa-solid fa-magnifying-glass search-button"></i></a>
                     <!-- search input-->
-                    <form id="search-header" method="post" action="https://www.themezaa.com/html/pofo/search-result.html" name="search-header" class="mfp-hide search-form-result">
+                    <form id="search-header" method="post" action="" name="search-header" class="mfp-hide search-form-result">
                         <div class="search-form position-relative">
                             <button type="submit" class="fa-solid fa-magnifying-glass close-search search-button"></button>
                             <input type="text" name="search" class="search-input" placeholder="Enter your keywords..." autocomplete="off">
