--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -28,7 +28,7 @@
                          
                         </li>
                         <li class="dropdown">
-                            <a data-bs-toggle="dropdown" href="{% url 'web:index' %}" title="Portfolio">Portfolio <i class="fa-solid fa-angle-right"></i></a>
+                            <a data-bs-toggle="dropdown" href="{% url 'web:portfolio' %}" title="Portfolio">Portfolio <i class="fa-solid fa-angle-right"></i></a>
                          
                         </li>
                         <li class="dropdown">
@@ -36,7 +36,7 @@
                          
                         </li>
                         <li class="dropdown">
-                            <a data-bs-toggle="dropdown" href="{% url 'web:index' %}" title="Contact"> Blog <i class="fa-solid fa-angle-right"></i></a>
+                            <a data-bs-toggle="dropdown" href="{% url 'web:blog' %}" title="Contact"> Blog <i class="fa-solid fa-angle-right"></i></a>
                          
                         </li>
                         <li class="dropdown">
