--- a/templates/web/blog.html
+++ b/templates/web/blog.html
@@ -1,17 +1,21 @@
+<!doctype html>
 
+{% extends 'web/partials/base3.html' %}
+{% load static %}
+{% block content %}     
+         
+
+        <!-- start header -->
        
-      {% extends 'web/partials/base3.html' %}
-      {% load static %}
-      {% block content %}     
-               
+        <!-- end header -->
         <!-- start page title section -->
-        <section class="wow animate__fadeIn parallax" data-parallax-background-ratio="0.5" style="background-image:url('{% static  'web/assets/images/parallax-bg33.jpg' %} ');">
+        <section class="wow animate__fadeIn parallax" data-parallax-background-ratio="0.5" style="background-image:url('images/parallax-bg33.jpg');">
             <div class="opacity-medium bg-extra-dark-gray"></div>
             <div class="container position-relative">
                 <div class="row align-items-center">
                     <div class="col-12 d-flex flex-column justify-content-center text-center extra-small-screen page-title-large">
                         <!-- start page title -->
-                        <h1 class="text-white-2 alt-font font-weight-600 letter-spacing-minus-1 margin-10px-bottom">Blog clean full width</h1>
+                        <h1 class="text-white-2 alt-font font-weight-600 letter-spacing-minus-1 margin-10px-bottom">Blog images</h1>
                         <span class="text-white-2 opacity6 alt-font">Lorem Ipsum is simply dummy text printing</span>
                         <!-- end page title --> 
                     </div>
@@ -21,181 +25,41 @@
         <!-- end page title section --> 
         <!-- start post content section -->
         <section class="wow animate__fadeIn">
-            <div class="container-fluid padding-five-lr"> 
+            <div class="container">
                 <div class="row">
                     <div class="col-12 blog-content">
-                        <ul class="blog-clean blog-wrapper grid grid-loading grid-4col xl-grid-4col lg-grid-3col md-grid-2col sm-grid-2col xs-grid-1col gutter-extra-large">
+                        <ul class="blog-zoom-image blog-wrapper grid grid-loading grid-3col xl-grid-3col lg-grid-3col md-grid-2col sm-grid-1col xs-grid-1col blog-post-style4 gutter-large">
                             <li class="grid-sizer"></li>
                             <!-- start post item -->
                             <li class="grid-item wow animate__fadeInUp">
-                                <div class="blog-post blog-post-style2 margin-50px-bottom md-margin-30px-bottom sm-margin-20px-bottom xs-margin-10px-bottom">
-                                    <div class="blog-post-images overflow-hidden margin-25px-bottom sm-margin-15px-bottom">
-                                        <a href="blog-post-layout-01.html">
-                                            <img src="{% static 'web/assets/images/blog-img98.jpg' %}" alt="">
-                                        </a>
+                                {% for blog in blogs %}
+                                <figure>
+                                    <div class="blog-img bg-extra-dark-gray">
+                                        <a href="{{blog.get_absolute_url}}"><img src="{{ blog.image.url }}" alt="" ></a>
                                     </div>
-                                    <div class="post-details">
-                                        <a href="blog-post-layout-01.html" class="post-title text-medium text-extra-dark-gray w-90 d-block lg-w-100">User-centered design means working with your users all throughout the project.</a>
-                                        <div class="separator-line-horrizontal-full bg-medium-light-gray margin-20px-tb sm-margin-15px-tb"></div>
-                                        <div class="author">
-                                            <img src="{% static 'web/assets/images/avtar-01.jpg' %}" alt="" class="rounded-circle">
-                                            <span class="text-medium-gray text-uppercase text-extra-small padding-15px-left d-inline-block">by <a href="blog-grid.html" class="text-medium-gray">Jay Benjamin</a>&nbsp;&nbsp;|&nbsp;&nbsp;20 April 2017</span>
+                                    <figcaption>
+                                        <div class="portfolio-hover-main text-start">
+                                            <div class="blog-hover-box align-bottom">
+                                                <span class="post-author text-extra-small text-medium-gray text-uppercase d-block margin-5px-bottom sm-margin-5px-bottom">{{ blog.date }} | by <a href="{{blog.get_absolute_url}}" class="text-medium-gray">{{ blog.name }}</a></span>
+                                                <h6 class="alt-font d-block text-white-2 font-weight-600 mb-0"><a href="{{blog.get_absolute_url}}" class="text-white-2 text-deep-pink-hover">{{blog.title}}</a></h6>
+                                                <p class="text-medium-gray margin-10px-top blog-hover-text">.</p>
+                                            </div>
                                         </div>
-                                    </div>
-                                </div>
+                                    </figcaption>
+                                </figure>
+                                {% endfor %}
                             </li>
-                            <!-- end post item -->
-                            <!-- start post item -->
-                            <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.2s">
-                                <div class="blog-post blog-post-style2 margin-50px-bottom md-margin-30px-bottom sm-margin-20px-bottom xs-margin-10px-bottom">
-                                    <div class="blog-post-images overflow-hidden margin-25px-bottom sm-margin-15px-bottom">
-                                        <a href="blog-post-layout-02.html">
-                                            <img src="{% static 'web/assets/images/blog-img99.jpg' %}" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="post-details">
-                                        <a href="blog-post-layout-02.html" class="post-title text-medium text-extra-dark-gray w-90 d-block lg-w-100">People kind of tend to mystify design and architecture by suggesting you need to train.</a>
-                                        <div class="separator-line-horrizontal-full bg-medium-light-gray margin-20px-tb sm-margin-15px-tb"></div>
-                                        <div class="author">
-                                            <img src="{% static 'web/assets/images/avtar-02.jpg' %}" alt="" class="rounded-circle">
-                                            <span class="text-medium-gray text-uppercase text-extra-small padding-15px-left d-inline-block">by <a href="blog-grid.html" class="text-medium-gray">Herman Miller</a>&nbsp;&nbsp;|&nbsp;&nbsp;20 April 2017</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <!-- end post item -->
-                            <!-- start post item -->
-                            <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
-                                <div class="blog-post blog-post-style2 margin-50px-bottom md-margin-30px-bottom sm-margin-20px-bottom xs-margin-10px-bottom">
-                                    <div class="blog-post-images overflow-hidden margin-25px-bottom sm-margin-15px-bottom">
-                                        <a href="blog-post-layout-03.html">
-                                            <img src="{% static 'web/assets/images/blog-img100.jpg' %}" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="post-details">
-                                        <a href="blog-post-layout-03.html" class="post-title text-medium text-extra-dark-gray w-90 d-block lg-w-100">Art has definitely influenced how I think of design, both as individual items and as a body of work.</a>
-                                        <div class="separator-line-horrizontal-full bg-medium-light-gray margin-20px-tb sm-margin-15px-tb"></div>
-                                        <div class="author">
-                                            <img src="images/avtar-03.jpg" alt="" class="rounded-circle">
-                                            <span class="text-medium-gray text-uppercase text-extra-small padding-15px-left d-inline-block">by <a href="blog-grid.html" class="text-medium-gray">Hugh Macleod</a>&nbsp;&nbsp;|&nbsp;&nbsp;15 March 2017</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <!-- end post item -->
-                            <!-- start post item -->
-                            <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.6s">
-                                <div class="blog-post blog-post-style2 margin-50px-bottom md-margin-30px-bottom sm-margin-20px-bottom xs-margin-10px-bottom">
-                                    <div class="blog-post-images overflow-hidden margin-25px-bottom sm-margin-15px-bottom">
-                                        <a href="blog-post-layout-04.html">
-                                            <img src="{% static 'web/assets/images/blog-img101.jpg' %}" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="post-details">
-                                        <a href="blog-post-layout-04.html" class="post-title text-medium text-extra-dark-gray w-90 d-block lg-w-100">The garden, by design, is concerned with both the interior and the land beyond the garden.</a>
-                                        <div class="separator-line-horrizontal-full bg-medium-light-gray margin-20px-tb sm-margin-15px-tb"></div>
-                                        <div class="author">
-                                            <img src="{% static 'web/assets/images/avtar-04.jpg' %}" alt="" class="rounded-circle">
-                                            <span class="text-medium-gray text-uppercase text-extra-small padding-15px-left d-inline-block">by <a href="blog-grid.html" class="text-medium-gray">Jay Benjamin</a>&nbsp;&nbsp;|&nbsp;&nbsp;10 march 2017</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <!-- end post item -->
-                            <!-- start post item -->
-                            <li class="grid-item wow animate__fadeInUp">
-                                <div class="blog-post blog-post-style2 margin-50px-bottom md-margin-30px-bottom sm-margin-20px-bottom xs-margin-10px-bottom">
-                                    <div class="blog-post-images overflow-hidden margin-25px-bottom sm-margin-15px-bottom">
-                                        <a href="blog-post-layout-05.html">
-                                            <img src="{% static 'web/assets/images/blog-img102.jpg' %}" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="post-details">
-                                        <a href="blog-post-layout-05.html" class="post-title text-medium text-extra-dark-gray w-90 d-block lg-w-100">I wanted to be a decorator. I wanted to interior design homes and do everything myself.</a>
-                                        <div class="separator-line-horrizontal-full bg-medium-light-gray margin-20px-tb sm-margin-15px-tb"></div>
-                                        <div class="author">
-                                            <img src="{% static 'web/assets/images/avtar-01.jpg' %}" alt="" class="rounded-circle">
-                                            <span class="text-medium-gray text-uppercase text-extra-small padding-15px-left d-inline-block">by <a href="blog-grid.html" class="text-medium-gray">John Doe</a>&nbsp;&nbsp;|&nbsp;&nbsp;01 March 2017</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <!-- end post item -->
-                            <!-- start post item -->
-                            <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.2s">
-                                <div class="blog-post blog-post-style2 margin-50px-bottom md-margin-30px-bottom sm-margin-20px-bottom xs-margin-10px-bottom">
-                                    <div class="blog-post-images overflow-hidden margin-25px-bottom sm-margin-15px-bottom">
-                                        <a href="blog-post-layout-01.html">
-                                            <img src="{% static 'web/assets/images/blog-img103.jpg' %}" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="post-details">
-                                        <a href="blog-post-layout-01.html" class="post-title text-medium text-extra-dark-gray w-90 d-block lg-w-100">It is not that you do wrong by design, but that you should never do right by mistake.</a>
-                                        <div class="separator-line-horrizontal-full bg-medium-light-gray margin-20px-tb sm-margin-15px-tb"></div>
-                                        <div class="author">
-                                            <img src="{% static 'web/assets/images/avtar-02.jpg' %}" alt="" class="rounded-circle">
-                                            <span class="text-medium-gray text-uppercase text-extra-small padding-15px-left d-inline-block">by <a href="blog-grid.html" class="text-medium-gray">Isaac Tobin</a>&nbsp;&nbsp;|&nbsp;&nbsp;20 February 2017</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <!-- end post item -->
-                            <!-- start post item -->
-                            <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
-                                <div class="blog-post blog-post-style2 margin-50px-bottom md-margin-30px-bottom sm-margin-20px-bottom xs-margin-10px-bottom">
-                                    <div class="blog-post-images overflow-hidden margin-25px-bottom sm-margin-15px-bottom">
-                                        <a href="blog-post-layout-04.html">
-                                            <img src="{% static 'web/assets/images/blog-img104.jpg' %}" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="post-details">
-                                        <a href="blog-post-layout-04.html" class="post-title text-medium text-extra-dark-gray w-90 d-block lg-w-100">Ever since I was young I loved making things and being part of the design process.</a>
-                                        <div class="separator-line-horrizontal-full bg-medium-light-gray margin-20px-tb sm-margin-15px-tb"></div>
-                                        <div class="author">
-                                            <img src="{% static 'web/assets/images/avtar-03.jpg' %}" alt="" class="rounded-circle">
-                                            <span class="text-medium-gray text-uppercase text-extra-small padding-15px-left d-inline-block">by <a href="blog-grid.html" class="text-medium-gray">Jason Bourne</a>&nbsp;&nbsp;|&nbsp;&nbsp;14 January 2017</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <!-- end post item -->
-                            <!-- start post item -->
-                            <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.6s">
-                                <div class="blog-post blog-post-style2 margin-50px-bottom md-margin-30px-bottom sm-margin-20px-bottom xs-margin-10px-bottom">
-                                    <div class="blog-post-images overflow-hidden margin-25px-bottom sm-margin-15px-bottom">
-                                        <a href="blog-post-layout-03.html">
-                                            <img src="{% static 'web/assets/images/blog-img105.jpg' %}" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="post-details">
-                                        <a href="blog-post-layout-03.html" class="post-title text-medium text-extra-dark-gray w-90 d-block lg-w-100">I'm a total control freak and love to participate in the design of every single aspect of life.</a>
-                                        <div class="separator-line-horrizontal-full bg-medium-light-gray margin-20px-tb sm-margin-15px-tb"></div>
-                                        <div class="author">
-                                            <img src="{% static 'web/assets/images/avtar-04.jpg' %}" alt="" class="rounded-circle">
-                                            <span class="text-medium-gray text-uppercase text-extra-small padding-15px-left d-inline-block">by <a href="blog-grid.html" class="text-medium-gray">Hugh Macleod</a>&nbsp;&nbsp;|&nbsp;&nbsp;22 December 2016</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
+                         
                             <!-- end post item -->
                         </ul>
                     </div>
                 </div>
                 <!-- start pagination -->
-                <div class="text-center margin-60px-top md-margin-50px-top wow animate__fadeInUp">
-                    <div class="pagination text-small text-uppercase text-extra-dark-gray">
-                        <ul class="mx-auto">
-                            <li><a href="#"><i class="fa-solid fa-arrow-left-long margin-5px-right d-none d-md-inline-block"></i> Prev</a></li>
-                            <li class="active"><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">Next <i class="fa-solid fa-arrow-right-long margin-5px-left d-none d-md-inline-block"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
+                
                 <!-- end pagination -->
             </div>
         </section>
         <!-- end post content section -->
         <!-- start footer --> 
+     
        {% endblock %}
