--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -90,44 +90,47 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-6 col-lg-7 col-md-9 col-sm-10 margin-eight-bottom md-margin-40px-bottom sm-margin-30px-bottom text-center last-paragraph-no-margin">
-                        <h5 class="alt-font font-weight-700 text-extra-dark-gray text-uppercase">tell us about your project</h5>
+                        <h5 class="alt-font font-weight-700 text-extra-dark-gray text-uppercase">Tell us about your project</h5>
                         <p>We’re eager to hear about your ideas and goals. Share the details of your project with us, and let’s explore how we can turn your vision into reality. Fill out the form below, or reach out directly to start the conversation.</p>
                     </div>  
                 </div>
-                <form id="project-contact-form" action="" method="post">
+                <form id="project-contact-form" class="contact-form-style ajax reload" action="#" method="post">
+                    {% csrf_token %}
                     <div class="row">
                         <div class="col-12">
                             <div class="form-results d-none"></div>
                         </div>
+        
                         <div class="col-md-6">
-                            <input type="text" name="name" id="name" placeholder="Name *" class="big-input required">
+                            {{ form.name }}
                         </div>
+        
                         <div class="col-md-6">
-                            <input type="tel" name="phone" id="phone" placeholder="Phone"  class="big-input">
+                            {{ form.mobil }}
                         </div>
+        
                         <div class="col-md-6">
-                            <input type="email" name="email" id="email" placeholder="E-mail *" class="big-input required">
+                            {{ form.email }}
                         </div>
+        
                         <div class="col-md-6">
-                            <div class="select-style big-select">
-                                <select name="budget" id="budget" class="bg-transparent mb-0">
-                                    <option value="">Select your budget</option>
-                                    <option value="$500 - $1000">$500 - $1000</option>
-                                    <option value="$1000 - $2000">$1000 - $2000</option>
-                                    <option value="$2000 - $5000">$2000 - $5000</option>
-                                </select>
-                            </div>
+                            {{ form.service }}
                         </div>
+        
                         <div class="col-12">
-                            <textarea name="comment" id="comment" placeholder="Describe your project" rows="6" class="big-textarea"></textarea>
+                            {{ form.message }}
                         </div>
+        
                         <div class="col-12 text-center">
-                            <button id="project-contact-us-button" type="submit" class="btn btn-transparent-dark-gray btn-large margin-20px-top submit">send message</button>
+                            <button id="project-contact-us-button" type="submit" class="btn btn-transparent-dark-gray btn-large margin-20px-top submit">Send Message</button>
                         </div>
                     </div>
                 </form>
             </div>
         </section>
+        
+        <!-- SweetAlert Script and Ajax Handler -->
+        
         <!-- end form section -->
         <section class="wow animate__fadeIn bg-light-gray">
             <div class="container">
@@ -152,3 +155,4 @@
        
         <!-- end footer -->
      {% endblock %}
+
