--- a/templates/web/partials/base.html
+++ b/templates/web/partials/base.html
@@ -49,7 +49,9 @@
         <script type="text/javascript" src="{% static 'web/assets/js/jquery.nav.js' %}"></script>
         <script type="text/javascript" src="{% static 'web/assets/js/hamburger-menu.js' %}"></script>
         <script type="text/javascript" src="{% static 'web/assets/js/theme-vendors.min.js' %}"></script>
-        <!-- setting -->
         <script type="text/javascript" src="{% static 'web/assets/js/main.js' %}"></script>
+
+        <script type="text/javascript" src="{% static 'web/assets/js/ajax.js' %}"></script>
+        <script type="text/javascript" src="{% static 'web/assets/js/sweetalert2.all.min.js' %}"></script>
     </body>
 </html>
