--- a/templates/web/partials/base3.html
+++ b/templates/web/partials/base3.html
@@ -3,7 +3,7 @@
 <html class="no-js" lang="en">
     <head>
         <!-- title -->
-        <title>POFO – Creative Agency, Corporate and Portfolio Multi-purpose Template</title>
+        <title></title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
@@ -51,5 +51,8 @@
         <script type="text/javascript" src="{% static 'web/assets/js/theme-vendors.min.js' %}"></script>
         <!-- setting -->
         <script type="text/javascript" src="{% static 'web/assets/js/main.js' %}"></script>
+
+        <script type="text/javascript" src="{% static 'web/assets/js/ajax.js' %}"></script>
+        <script type="text/javascript" src="{% static 'web/assets/js/sweetalert2.all.min.js' %}"></script>
     </body>
 </html>
